[package]
name = "ed25519-signatures"
version = "0.1.0"
authors = ["Simon Warta <simon@warta.it>"]
edition = "2018"
license = "(WTFPL OR 0BSD OR Unlicense OR MIT OR BSD-3-Clause)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7.3"
hex = "0.4"
